--- a/app/globals.css
+++ b/app/globals.css
@@ -1,33 +1,64 @@
+/* Hanken Grotesk */
+@import url('https://fonts.googleapis.com/css2?family=Hanken+Grotesk:ital,wght@0,100..900;1,100..900&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+*::-webkit-scrollbar{
+  @apply w-0
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
+body{
+  @apply bg-brand-black text-white font-hanken pb-10
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+.swiper-pagination {
+  @apply !text-left top-10 !translate-y-2
 }
 
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
+.swiper-pagination-bullet {
+  @apply !w-2.5 !h-2.5 rounded-full !bg-white !opacity-100
 }
+
+.swiper-pagination-bullet.swiper-pagination-bullet-active{
+  @apply !bg-brand-orange !w-2.5 !h-2.5
+}
+
+/* fonts */
+@font-face {
+  font-family: 'Atyp Display';
+  src: url('../public/font/AtypDisplay-Regular.woff2') format('woff2'),
+      url('../public/font/AtypDisplay-Regular.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Atyp Display';
+  src: url('../public/font/AtypDisplay-Bold.woff2') format('woff2'),
+      url('../public/font/AtypDisplay-Bold.woff') format('woff');
+  font-weight: bold;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Atyp Display';
+  src: url('../public/font/AtypDisplay-Medium.woff2') format('woff2'),
+      url('../public/font/AtypDisplay-Medium.woff') format('woff');
+  font-weight: 500;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Atyp Display';
+  src: url('../public/font/AtypDisplay-Semibold.woff2') format('woff2'),
+      url('../public/font/AtypDisplay-Semibold.woff') format('woff');
+  font-weight: 600;
+  font-style: normal;
+  font-display: swap;
+}
+
